--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 streamlit==1.38.0
-tensorflow==2.16.1
-keras==3.3.3
+tensorflow==2.15.0
+keras==2.15.0
 numpy==1.26.4
-opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 joblib==1.4.2
 gdown==5.2.0
 matplotlib==3.9.2
 scikit-learn==1.5.2
 pandas==2.2.3
+
