--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.38.0
-tensorflow==2.15.0
-keras==2.15.0
+tensorflow-cpu==2.20.0
+keras==3.5.0
 numpy==1.26.4
 opencv-python-headless==4.10.0.84
 joblib==1.4.2
@@ -8,4 +8,3 @@ gdown==5.2.0
 matplotlib==3.9.2
 scikit-learn==1.5.2
 pandas==2.2.3
-
