--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.38.0
-tensorflow-cpu==2.20.0
-keras>=3.10.0
-numpy==1.26.4
+tensorflow==2.20.0
+keras==3.11.3
+numpy==2.1.1
 opencv-python-headless==4.10.0.84
 joblib==1.4.2
 gdown==5.2.0
